--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,15 @@
  */
 /* General Styles: */
 /* Landing Page: */
+.home-landing-wrapper {
+  position: relative;
+  display: grid;
+  grid-auto-rows: minmax(100vh, auto); }
+
 .home-landing-grid {
   position: relative;
   display: grid;
   grid-template-areas: "title" "subtitle";
-  height: 100vh;
   width: 100%;
   padding-left: 4.167%;
   padding-right: 4.167%;
@@ -32,7 +36,7 @@
   justify-content: start; }
 
 .home-title__text {
-  margin-bottom: .5em;
+  margin-top: .5em;
   font-family: "Playfair Display", serif;
   font-size: 3rem;
   font-weight: 700;
@@ -49,18 +53,22 @@
 
 .home-landing__subtitle {
   grid-area: subtitle;
-  padding-top: 1em;
+  padding-bottom: 1em;
   font-size: 1rem;
   font-style: italic;
   font-family: "Taviraj", serif;
-  line-height: 1.2 !important;
+  line-height: 1.5 !important;
+  margin-top: 1.5em;
   color: black; }
   .home-landing__subtitle span {
     background-color: #ccfeff; }
   @media screen and (min-width: 600px) {
     .home-landing__subtitle {
-      font-size: 1.25rem; } }
+      font-size: 1.5rem; } }
   @media screen and (min-width: 768px) {
+    .home-landing__subtitle {
+      font-size: 1.75rem; } }
+  @media screen and (min-width: 1024px) {
     .home-landing__subtitle {
       font-size: 2rem; } }
 
@@ -70,10 +78,12 @@
   display: grid;
   grid-template-columns: 1fr;
   grid-template-areas: "about" "exhibit" "bg" "context" "teaching";
-  padding: 0 4.167%; }
+  padding: 0 4.167%;
+  padding-top: 1em; }
   @media screen and (min-width: 600px) {
     .home-main-content {
-      padding: 0 8.33%; } }
+      padding: 0 8.33%;
+      padding-top: 1em; } }
   @media screen and (min-width: 768px) {
     .home-main-content {
       grid-template-columns: 1fr 1fr;
